Format and tiny refactors and comment